# Coder

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pyproject.toml  run.ps1
.cargo/: config.toml
crates/coder-extensions/: Cargo.toml
crates/coder-extensions/src/: lib.rs  stdio_mcp.rs
crates/coder-server/: Cargo.toml
crates/coder-server/src/: api_types.rs  background_commands.rs  cache_runtime.rs  capability_registry.rs  change_sets.rs  code_task_runtime.rs  conversation.rs  conversation_provider.rs  conversation_runtime.rs  credential_store.rs  extension_endpoints.rs  goal_runtime.rs  lib.rs  local_api_transport.rs  mcp_runtime.rs  memory_endpoints.rs  model_tool_agent_hooks.rs  model_tool_async_attachments.rs  model_tool_background_tasks.rs  model_tool_builtin_operations.rs  model_tool_command_hooks.rs  model_tool_dispatch.rs  model_tool_execute_pipeline.rs  model_tool_execution.rs  model_tool_hook_output.rs  model_tool_hook_phase.rs  model_tool_hook_runtime.rs  model_tool_input.rs  model_tool_permissions.rs  model_tool_phase.rs  model_tool_prompt_hooks.rs  model_tool_response.rs  model_tool_result_storage.rs  model_tool_run_context.rs  model_tool_server_executor.rs  model_tool_skill_context.rs  model_tool_skill_execution.rs  model_tool_webhook_hooks.rs  native_model_backend.rs  native_model_mcp.rs  (+29 more)
crates/coder-server/src/tests/: command_tools.rs  conversation.rs  mcp_api.rs  model_tool_core.rs  model_tool_hooks.rs  planner_chat.rs  planner_workflow.rs  projections_cache.rs  provider_runtime.rs  subagent_endpoints.rs
crates/coder-tools/: Cargo.toml
crates/coder-tools/src/: catalog.rs  command_process.rs  inline_patch.rs  lib.rs  models.rs  tests.rs
docs/: 1.0-acceptance-tests.md  AGENT_HARNESS_DESIGN_AUDIT.md  ARCHITECTURE.md  CAPABILITY_BOUNDARY_MATRIX.md  CODEX_PARITY_GAP_REPORT.md  CODEX_STYLE_TIMELINE.md  DESKTOP_APP_PLAN.md  HARNESS_CODEX_STANDARD.md  LOCAL_CACHE_AND_RESOURCE_POLICY.md  NON_BLOCKING_ENHANCEMENTS.md  OPENHANDS_INTEGRATION.md  PLANNER_FIRST_PRODUCT_LOOP.md  PLANNER_FIRST_RELEASE_CHECKLIST.md  PLANNER_MEMORY_OPENHANDS_AUDIT.md  PLUGIN_AND_SKILLS_PAGE.md  PROVIDER_SETUP.md  PYTHON_COMPATIBILITY_REMNANTS_AUDIT.md  README.md  RELEASE_CHECKLIST.md  (+31 more)
(+245 files in other folders)
