[package]
name = "coder-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
coder-harness.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
