[package]
name = "coder-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
coder-config.workspace = true
coder-core.workspace = true
coder-events.workspace = true
coder-extensions.workspace = true
coder-harness.workspace = true
coder-memory.workspace = true
coder-store.workspace = true
coder-tools.workspace = true
coder-workflow.workspace = true
eventsource-stream.workspace = true
fastrand.workspace = true
futures-util.workspace = true
keyring = { workspace = true, features = ["crypto-rust"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native-async-persistent"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service"] }
